# sre-bot

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  catalog-info.yaml  catalog-info.yml  package-lock.json  package.json
app/: .coveragerc  .env.example  .flake8  .pylintrc  Dockerfile  Makefile  exceptions.py  main.py  manual_test_opsgenie.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  test_geolocate_integration.py
app/api/: router.py
app/api/dependencies/: rate_limits.py
app/api/routes/: auth.py  landing.py  landing_content.json  system.py
app/api/v1/: router.py
app/commands/: atip.py  aws.py  google_service.py  incident.py  role.py  secret.py  sre.py  utils.py
app/commands/helpers/: geolocate_helper.py  incident_helper.py  vpn_helper.py  webhook_helper.py
app/commands/locales/: atip.en-US.yml  atip.en.yml  atip.fr-FR.yml  atip.fr.yml  incident.en-US.yml  incident.fr-FR.yml  role.en-US.yml  role.fr-FR.yml  secret.en-US.yml  secret.fr-FR.yml
app/core/: config.py  identity.py  logging.py  security.py
app/docs/: slack-bolt-reference.md
app/infrastructure/: __init__.py  logging.py
app/infrastructure/audit/: __init__.py  models.py  protocol.py  service.py
app/infrastructure/auth/: __init__.py  identity.py  security.py
app/infrastructure/commands/: README.md  __init__.py  adapters.py  context.py  models.py  parser.py  registry.py  router.py  service.py
app/infrastructure/configuration/: __init__.py  app.py  base.py  docs_generator.py  settings.py
app/infrastructure/directory/: __init__.py  factory.py  google.py  models.py  provider.py
app/infrastructure/events/: __init__.py  bootstrap.py  discovery.py  dispatcher.py  models.py  registry.py  service.py
app/infrastructure/hookspecs/: __init__.py  features.py  platforms.py
app/infrastructure/i18n/: __init__.py  factory.py  loader.py  models.py  resolvers.py  resources.py  service.py  translator.py
app/infrastructure/idempotency/: __init__.py  cache.py  dynamodb.py  factory.py  key_builder.py  protocol.py  service.py
app/infrastructure/identity/: __init__.py  models.py  resolver.py  service.py
app/infrastructure/logging/: __init__.py  context.py  formatters.py  setup.py
app/infrastructure/models/: __init__.py  base.py  responses.py
app/infrastructure/notifications/: README.md  __init__.py  dispatcher.py  models.py  service.py
app/infrastructure/observability/: __init__.py  logging.py
app/infrastructure/operations/: __init__.py  classifiers.py  result.py  status.py
app/infrastructure/persistence/: __init__.py  dynamodb_audit.py  service.py
app/infrastructure/plugins/: __init__.py  base.py  manager.py  specs.py
app/infrastructure/resilience/: __init__.py  circuit_breaker.py  persistence.py  service.py
app/infrastructure/security/: __init__.py  current_user.py  jwks.py  jwt.py  models.py  rate_limiter.py
app/infrastructure/services/: __init__.py  dependencies.py  providers.py
app/infrastructure/slack/: __init__.py  formatter.py  help.py  lifecycle.py  models.py  parsing.py  routing.py  service.py  settings.py
app/infrastructure/storage/: __init__.py  protocol.py  service.py
app/integrations/: aws_account_health.py  aws_client_vpn.py  aws_sso.py  google_drive.py  maxmind.py  notify.py  opsgenie.py  sentinel.py  trello.py
app/integrations/aws/: client.py  client_next.py  config.py  cost_explorer.py  dynamodb.py  dynamodb_next.py  elasticache.py  elasticache_management.py  guard_duty.py  identity_store.py  identity_store_next.py  lambdas.py  ogranizations.py  organizations.py  schemas.py  security_hub.py  settings.py  shield.py  sqs.py  sso_admin.py
app/integrations/google_next/: directory.py  docs.py  meet.py  service.py  utils.py
app/integrations/google_workspace/: gmail.py  gmail_next.py  google_calendar.py  google_directory.py  google_directory_next.py  google_docs.py  google_drive.py  google_meet.py  google_service.py  google_service_next.py  meet.py  schemas.py  sheets.py
app/integrations/maxmind/: __init__.py  client.py
app/integrations/notify/: __init__.py  client.py
app/integrations/opsgenie/: __init__.py  client.py
app/integrations/sentinel/: __init__.py  client.py
app/integrations/slack/: __init__.py  blocks.py  bootstrap.py  channels.py  client.py  commands.py  formatter.py  help.py  models.py  parser.py  provider.py  service.py  settings.py  shield.py  users.py  utils.py
app/integrations/trello/: __init__.py  client.py
app/integrations/utils/: api.py
app/jobs/: __init__.py  client_vpn_turn_off.py  models.py  notify_stale_incident_channels.py  revoke_aws_sso_access.py  scheduled_tasks.py
app/locales/: atip.en-US.yml  atip.fr-FR.yml  commands.en-US.yml  commands.fr-FR.yml  dev.en-US.yml  dev.fr-FR.yml  geolocate.en-US.yml  geolocate.fr-FR.yml  groups.en-US.yml  groups.fr-FR.yml  incident.en-US.yml  incident.fr-FR.yml  role.fr-FR.yml  sre.en-US.yml  sre.fr-FR.yml
app/models/: __init__.py  aws_access_requests.py  incidents.py  integrations.py  utils.py  webhooks.py
app/modules/: __init__.py  google_service.py
app/modules/atip/: __init__.py  atip.py
app/server/: bot_middleware.py  lifespan.py  server.py  utils.py
app/tests/: TESTING_STRATEGY.md  conftest.py  test_factory_validation.py  test_main.py
app/utils/: filters.py  models.py  tests.py
(+1414 files in other folders)
